--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
   "devDependencies": {
     "gh-pages": "^2.2.0"
   },
-  "homepage": "http://blgworld.github.io/my-react-demo"
+  "homepage": "http://blgworld.github.io/my-react-demo/"
 }
