--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
   "devDependencies": {
     "gh-pages": "^2.2.0"
   },
-  "homepage": "https://blgworld.github.io/my-react-demo"
+  "homepage": "https://blgworld.github.io/my-react-dem"
 }
